[package]
name = "hpydev"
version = "0.1.0"
authors = ["ymgyt <yamaguchi7073xtt@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
structopt = {version = "0.3.17", features = ["wrap_help"]}
anyhow = "1.0.32"
tracing = "0.1.19"
tracing-subscriber = "0.2.11"
tokio = {version = "0.2.18", features = ["macros","io-util", "rt-core","rt-threaded"] }
lazy_static = "1.4.0"
